# tl-search

./: .gitignore  README.md  pyproject.toml
assets/maps/: board_0001.txt  board_0002.txt  board_0002_obj.txt
batch/: push_batch.sh
scripts/: check_states_overlap.py  compare_models.py  count_nodes.py  count_random_search.py  count_wins.py  create_all_nodes.py  create_node.py  create_rw_data.py  evaluate_multistep_kl_div.py  evaluate_rw.py  evaluate_rw_parking.py  evaluate_similarity.py  filter_specs_by_rewards.py  format_lc_plots.py  generate_similarity_metrics.py  main_eval_heuristic_env.py  main_eval_tl_env.py  main_evaluate_specs.py  main_sb.py  main_sb_debug.py  main_search.py  main_search_exh.py  main_search_trained.py  main_tl_exhaustive.py  main_tl_exhaustive_goal.py  main_tl_exhaustive_push.py  main_tl_search.py  main_tl_search_goal.py  main_tl_search_parking.py  main_tl_search_patrol.py  main_tl_search_push.py  main_tl_simulate.py  main_train_heuristic_env.py  main_train_specs.py  main_train_tl_goal.py  main_train_tl_parking.py  main_train_tl_push.py  main_train_tl_spec.py  plot_ablation_from_trained.py  plot_cargoal1_env.py  (+13 more)
tests/: test_heuristic_enemy_env.py  test_load_results.py  test_parking_env.py  test_search_filter.py  test_tl_automaton.py  test_tl_multigrid.py
tl_search/common/: io.py  json.py  logger.py  plotter.py  seed.py  tuning.py  types.py  typing.py  utils.py
tl_search/envs/: base.py  callback.py  defensive.py  eval.py  heuristic.py  multigrid.py  parking.py  search.py  select.py  selfplay.py  simple_tag.py  tl_multigrid.py  tl_parking.py  tl_pick_and_place.py  tl_push.py  tl_safety_builder.py  tl_safety_tasks.py  train.py  typing.py  wrapper.py
tl_search/evaluation/: conversion.py  count.py  eval.py  evaluation.py  extractor.py  filter.py  ranking.py  visualize.py  wrapper.py
tl_search/map/: utils.py
tl_search/policies/: heuristic.py  known_policy.py  probabilistic.py  simulator.py  unknown_policy.py  utils.py
tl_search/preprocess/: continuation.py
tl_search/search/: filter.py  neighbor.py  sample.py  search.py  search_goal.py  search_parking.py  search_push.py  wrapper.py
tl_search/tl/: constants.py  control_barrier.py  environment.py  reward.py  synthesis.py  tl_generator.py  tl_parser.py  transition.py
tl_search/train/: tl_train.py  tl_train_goal.py  tl_train_parking.py  tl_train_push.py  train.py  wrapper.py
