[tool.poetry]
name = "tl-search"
version = "0.1.0"
description = "'Temporal logic inference using greedy search\""
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tl_search"}]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
spottl = {git = "https://github.com/Tran-Research-Group/spottl.git"}
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
gym = "^0.26"
dataclasses-json = "^0.5.7"
stable-baselines3 = {version = "^2.0.0a9", allow-prereleases = true}
torch = "^2.0.1+cu118"
shimmy = ">=0.2.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
