[tool.poetry]
name = "tl-search"
version = "0.1.0"
description = "'Temporal logic inference using greedy search\""
authors = ["Mikihisa Yuasa <myuasa2@illinois.edu>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "tl_search" }]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
gym = "^0.26"
dataclasses-json = "^0.5.7"
stable-baselines3 = "^2.0.0a9"
#torch = { version = "2.0.0+cu118", source = "torch" }
shimmy = ">=0.2.1"
spottl = "^2.11.6"
highway-env = "^1.8.2"
imageio = "^2.33.1"
tensorboard = "^2.15.1"
safety-robot-gym = {git = "https://github.com/miki-yuasa/safety-robot-gym.git"}
sb3-contrib = "^2.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
